--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "mongoose": "^4.13.7",
     "nodemon": "^1.14.1",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^1.0.0"
+    "passport-google-oauth": "^1.0.0"
   }
 }
