--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "server": "nodemon index.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild":
-      "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
@@ -26,6 +25,7 @@
     "nodemon": "^1.14.1",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
+    "sendgrid": "^5.2.3",
     "stripe": "^5.4.0"
   }
 }
