--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
-    "materialize-css": "^0.100.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
@@ -20,6 +19,7 @@
     "react-scripts": "1.0.17",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^3.7.2",
+    "redux-form": "^7.3.0",
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
